--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -161,7 +161,7 @@
                     <div class="col-md-8">
                         <button ng-disabled="regForm.$invalid" type="button" class=" center-block col-md-12 btn red input-rounded"
                                 ng-click="vm.registerCandidate()">
-                            Registration
+                            Register Free
                         </button>
                     </div>
                 </div>
