--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -124,3 +124,29 @@ padding-top:5px;}
     font-weight: bold;
 
 }
+
+.user-error-msg-arrow {
+    width: 0px;
+    height: 0px;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid #dd4b39;
+    position: absolute;
+    right: 3%;
+    bottom: 15%;
+    z-index: 12;
+}
+
+.user-error-msg {
+    position: absolute;
+    bottom: -3px;
+    width: 50%;
+    z-index: 11;
+    text-transform: none;
+    background-color: #dd4b39!important;
+    border-color: #D95C5C!important;
+    color: #FFF!important;
+    left: 97%;
+    padding: 5px;
+    border-radius: 4px;
+}
