--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <div class="portlet light form-fit bordered col-md-offset-7 col-md-5 margin-top-30 reg-pannel">
+    <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel">
         <div class="portlet-title reg-pannel-title" style="height: 78px">
             <div class="caption">
                 <span class=" reg-header uppercase">Registration</span>
@@ -33,6 +33,10 @@
                             <option value="relative">Relative</option>
                             <option value="friend">Friend</option>
                         </select>
+                        <span ng-if="showSelectProfile">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Please select profile for !</div>
+                    </span>
                     </div>
                 </div>
 
@@ -41,6 +45,10 @@
 
                     <div class="col-md-8">
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
+                    <span ng-if="showName">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Enter Name !</div>
+                    </span>
                     </div>
                 </div>
 
@@ -67,6 +75,10 @@
 
 
                         </div>
+                        <span ng-if="showGender">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Select a Gender</div>
+                    </span>
 
                         <!--<div >-->
 
@@ -87,7 +99,13 @@
             <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
                         </p>
+                        <span ng-if="showDOB">
+                        <div class="user-error-msg-arrow" style="bottom:32px!important;"></div>
+                        <div class="user-error-msg" style="bottom:23px!important;">Select Date of Birth</div>
+                    </span>
+
                     </div>
+
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 control-label reg-label ">MOTHER TONGUE<span style="color: red">*</span></label>
@@ -98,6 +116,10 @@
                                 ng-model="reg.mothertongue" required>
                             <option ng-repeat="obj in motherTongueList" value="{{obj.id_mothertongue}}">{{obj.mothertongue}}</option>
                         </select>
+                        <span ng-if="showmt">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Select Mother Tongue</div>
+                    </span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -109,6 +131,10 @@
                                 ng-model="reg.religion" required>
                             <option ng-repeat="obj in religonList" value="{{obj.id_religion}}">{{obj.religion}}</option>
                         </select>
+                         <span ng-if="showreligion">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Select Religion</div>
+                    </span>
                     </div>
                 </div>
 
@@ -117,6 +143,10 @@
 
                     <div class="col-md-8">
                         <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
+                    <span ng-if="showemail">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Invalid Email</div>
+                    </span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -134,6 +164,10 @@
 
                     <div class="col-md-5">
                         <input type="number" required class="form-control input-rounded" ng-model="reg.mobile" placeholder="Mobile Number">
+                     <span ng-if="showMobileNumber">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >{{moberror}}</div>
+                    </span>
                     </div>
                 </div>
 
@@ -143,6 +177,10 @@
                     <div class="col-md-8">
                         <input required type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
                                style="margin-rightt: 5%">
+                        <span ng-if="showPassword">
+                        <div class="user-error-msg-arrow" ></div>
+                        <div class="user-error-msg" >Enter Password</div>
+                    </span>
                     </div>
                 </div>
 
@@ -159,7 +197,7 @@
                     <label class="col-md-3 control-label"></label>
 
                     <div class="col-md-8">
-                        <button ng-disabled="regForm.$invalid" type="button" class=" center-block col-md-12 btn red input-rounded"
+                        <button  type="button" class=" center-block col-md-12 btn red input-rounded"
                                 ng-click="vm.registerCandidate()">
                             Register Free
                         </button>
