--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -35,7 +35,7 @@
                         </select>
                         <span ng-if="showSelectProfile">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Please select profile for !</div>
+                        <div class="user-error-msg" >Select Profile for</div>
                     </span>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     <span ng-if="showName">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Enter Name !</div>
+                        <div class="user-error-msg" >Enter your name</div>
                     </span>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                         </div>
                         <span ng-if="showGender">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select a Gender</div>
+                        <div class="user-error-msg" >Select Gender</div>
                     </span>
 
                         <!--<div >-->
@@ -101,7 +101,7 @@
                         </p>
                         <span ng-if="showDOB">
                         <div class="user-error-msg-arrow" style="bottom:32px!important;"></div>
-                        <div class="user-error-msg" style="bottom:23px!important;">Select Date of Birth</div>
+                        <div class="user-error-msg" style="bottom:23px!important;">Select date of birth of Bride / Groom</div>
                     </span>
 
                     </div>
@@ -118,7 +118,7 @@
                         </select>
                         <span ng-if="showmt">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select Mother Tongue</div>
+                        <div class="user-error-msg" >Select mother tongue of Bride / Groom</div>
                     </span>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                         </select>
                          <span ng-if="showreligion">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select Religion</div>
+                        <div class="user-error-msg" >Select religion of Bride / Groom</div>
                     </span>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
                     <span ng-if="showemail">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Invalid Email</div>
+                        <div class="user-error-msg" >Enter e-mail ID</div>
                     </span>
                     </div>
                 </div>
