payment module design added in hep lin dashboard

--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -25,7 +25,7 @@
                         <li><a ui-sref="search">SEARCH</a></li>
                         <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
-                        <li><a ui-sref="#">HELP</a></li>
+                        <li><a ui-sref="payment">HELP</a></li>
                     </ul>
                 </div>
 
