--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -140,7 +140,7 @@ padding-top:5px;}
 .user-error-msg {
     position: absolute;
     bottom: -3px;
-    width: 50%;
+    width: 30%;
     z-index: 11;
     text-transform: none;
     background-color: #dd4b39!important;
@@ -148,5 +148,9 @@ padding-top:5px;}
     color: #FFF!important;
     left: 97%;
     padding: 5px;
-    border-radius: 4px;
+    font-size: 10px;
+    border-radius: 20px;
+}
+.text-dis{
+    margin-bottom: 7px!important;
 }
