--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -23,8 +23,8 @@
                     <div class="fileUpload btn btn-sm ">
                                             <span><i class="fa fa-camera"></i> Upload Photos
                                             </span>
-                        <input type="file" id="myFile"
-                               onchange="angular.element(this).scope().uploadFile(this.files)"
+                        <input type="file" id="myFile2"
+                               onchange="angular.element(this).scope().uploadFile2(this.files)"
                                class="upload">
                     </div>
                 </div>
