--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -190,7 +190,7 @@
 
 
                         <div class="row">
-                            <div class="col-sm-3" ng-repeat="image in images">
+                            <div class="col-sm-3" ng-repeat="image in images" style="margin-top: 15px">
 
 
                                 <div class="thumbnail">
